--- a/app/views/my-tasks-using-tl/address-verify/i-cannot-do-this-task.html
+++ b/app/views/my-tasks-using-tl/address-verify/i-cannot-do-this-task.html
@@ -171,7 +171,7 @@
         Description
       </dt>
       <dd class="govuk-summary-list__value">
-        Check & verify all the carer details and benefits
+        Check and verify all carer details and benefits
       </dd>
     </div>
     <div class="govuk-summary-list__row">
@@ -194,7 +194,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">I can't do this task</h1>
+      <h1 class="govuk-heading-xl">Why can't you do this task?</h1>
 
       <form class="form " name="reason-form" action="/my-tasks-using-tl/task-list-no-verify-address" onsubmit="return validateForm()" method="post">
 
@@ -218,16 +218,16 @@
 
           <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="reason-1" name="reason-for-not-doing-task" type="radio" value="Not relevent to my skillset or training" data-aria-controls="reason-for-not-doing-task-1">
+              <input class="govuk-radios__input" id="reason-1" name="reason-for-not-doing-task" type="radio" value="I don't have relevant experience or training" data-aria-controls="reason-for-not-doing-task-1">
               <label class="govuk-label govuk-radios__label" for="reason-1">
-                Not relevent to my skillset or training
+                I don't have relevant experience or training
               </label>
             </div>
 
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="reason-2" name="reason-for-not-doing-task" type="radio" value="Task does not have enough details to asses it’s complexity" data-aria-controls="reason-for-not-doing-task-2">
+              <input class="govuk-radios__input" id="reason-2" name="reason-for-not-doing-task" type="radio" value="I don't have enough information to assess complexity of task" data-aria-controls="reason-for-not-doing-task-2">
               <label class="govuk-label govuk-radios__label" for="reason-2">
-                Not enough information to assess complexity of task
+                I don't have enough information to assess complexity of task
               </label>
             </div>
 
@@ -241,7 +241,7 @@
             <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="reason-for-not-doing-task-4">
               <div class="govuk-form-group">
                 <label class="govuk-label" for="reason-5">
-                  Enter your reason
+                  Enter reason
                 </label>
 
                 <!-- Error -->
