--- a/app/views/my-tasks-using-tl/address-verify/verify-addresses.html
+++ b/app/views/my-tasks-using-tl/address-verify/verify-addresses.html
@@ -68,7 +68,7 @@
           </dt>
 
           <dd class="govuk-summary-list__value">
-            <strong class="govuk-tag govuk-tag--grey">
+            <strong class="govuk-tag govuk-tag--yellow">
               Not started
             </strong>
           </dd>
@@ -118,7 +118,7 @@
       <br>      <br>
 
     <!--   <p class="govuk-body govuk-!-font-weight-bold">Other actions</p> -->
-      <p><a href="i-cannot-do-this-task">I can't do this task</a></p>
+      <p><a href="i-cannot-do-this-task">I cannot do this task</a></p>
 
     </div>
 
