--- a/app/views/my-tasks-using-tl/claim-details/bluezone-process-1.html
+++ b/app/views/my-tasks-using-tl/claim-details/bluezone-process-1.html
@@ -101,7 +101,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#other-reason-required">Enter your notes</a>
+        <a href="#other-reason-required">Enter notes</a>
       </li>
     </ul>
   </div>
@@ -120,28 +120,24 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+   <p class="govuk-caption-l">Relevant description of task appears here</p>
 
-       <p class="govuk-caption-l">Relevant description of task appears here</p>
-
-      <br><br><br>
-      <p>
-
-
-    <strong>Task journey and completion</strong><br>
-    </p><p>
-    You may be directed to an existing sytem to finish the task journey and may be directed to 'end this task' page once the task is completed. </p>
-
-    <br><br>
-
-          <button class="govuk-button" data-module="govuk-button">Continue</button>
-          <br><br>
-              <p class="govuk-heading-s">Other actions</p>
-              <p>
-                <a href="pause-this-task">Park task</a>
-              </p>
+  <br><br><br>
+  <p>
 
 
+<strong>Task journey and completion</strong><br>
+</p><p>
+You may be directed to an existing sytem to finish the task journey and may be directed to 'end this task' page once the task is completed. </p>
 
+<br><br>
+
+      <button class="govuk-button" data-module="govuk-button">Continue</button>
+      <br><br>
+          <p class="govuk-heading-s">Other actions</p>
+          <p>
+            <a href="pause-this-task">Park task</a>
+          </p>
 
     </div>
   </div>
