--- a/app/views/my-tasks-using-tl/claim-details/check-claim-details.html
+++ b/app/views/my-tasks-using-tl/claim-details/check-claim-details.html
@@ -99,7 +99,7 @@
             Description
           </dt>
           <dd class="govuk-summary-list__value">
-            Perform a check and update ceased to care detials
+            Check and update ceased to care details
           </dd>
 
         </div>
@@ -120,7 +120,7 @@
 
       <br>      <br>
 
-      <p><a href="i-cannot-do-this-task-2">I cannot do task</a></p>
+      <p><a href="i-cannot-do-this-task-2">I cannot do this task</a></p>
     </div>
 
     <!--  Task history </p> -->
