--- a/app/views/my-tasks-using-tl/in-progress-2/bluezone-process.html
+++ b/app/views/my-tasks-using-tl/in-progress-2/bluezone-process.html
@@ -58,14 +58,20 @@
         Task page
       </h1>
 
-      <p>This shows the last saved page in the task completion process. <br><br> For example, this may be 'Bank or building society details' page in 'Start a paper claim' task.  </p>
-      <br>
-      <p><strong>End of an task</strong><br> You may be directed to an 'End this task' page once the task is completed.
+      <p class="govuk-caption-l">Relevant description of task appears here</p>
 
-      <br>
-      <br>
+     <br><br><br>
+     <p>
 
-      <a href="/my-tasks-using-tl/task-list">Go to My tasks</a></p>
+
+   <strong>Task journey and completion</strong><br>
+   </p><p>
+   You may be directed to an existing sytem to finish the task journey and may be directed to 'end this task' page once the task is completed. </p>
+
+   <br><br>
+
+
+      <p><a href="/my-tasks-using-tl/task-list">Go to My tasks page </a></p>
     </div>
   </div>
 
