--- a/app/views/my-tasks-using-tl/in-progress-2/cancel-this-task.html
+++ b/app/views/my-tasks-using-tl/in-progress-2/cancel-this-task.html
@@ -79,7 +79,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#reason-for-cancel">Enter your reason for not doing this task</a>
+        <a href="#reason-for-cancel">Enter reason for cancelling task</a>
       </li>
     </ul>
   </div>
@@ -157,7 +157,7 @@
                   Priority
                 </dt>
                 <dd class="govuk-summary-list__value">
-                  Very High
+                  Very high
                 </dd>
 
               </div>
@@ -174,19 +174,19 @@
 
       <div class="govuk-form-group" id="reason-for-cancel">
         <label class="govuk-label" for="more-detail">
-          Enter the reason why you want to cancel this task
+          Enter reason for cancelling task
         </label>
 
         <!-- Field Error - Start -->
         <span id="reason-to-cancel-text" class="govuk-error-message govuk-radios__conditional--hidden">
-            <span class="govuk-visually-hidden">Error:</span>Enter your reason for not doing this task
+            <span class="govuk-visually-hidden">Error:</span>Enter reason for cancelling task
         </span>
         <!-- Field Error - End -->
 
         <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
       </div>
 
-      <button class="govuk-button" data-module="govuk-button">Cancel this task</button>
+      <button class="govuk-button" data-module="govuk-button">Cancel task</button>
 
       </form>
     </div>
