--- a/app/views/my-tasks-using-tl/in-progress/verify-non-employment.html
+++ b/app/views/my-tasks-using-tl/in-progress/verify-non-employment.html
@@ -30,7 +30,7 @@
 
           <li class="govuk-header__navigation-item ">
             <a class="govuk-header__link" href="/my-tasks-using-tl/statistics/statistics">
-              My clearnaces
+              My clearances
             </a>
           </li>
 
@@ -109,7 +109,7 @@
             Priority
           </dt>
           <dd class="govuk-summary-list__value">
-            Very High
+            Very high
           </dd>
 
         </div>
@@ -117,7 +117,7 @@
       </dl>
 
       <br>
-      <a href="bluezone-process"><button class="govuk-button" data-module="govuk-button" >Resume this task </button></a>
+      <a href="bluezone-process"><button class="govuk-button" data-module="govuk-button" >Resume task </button></a>
 
       <br>      <br>
 <p class="govuk-heading-s">Other actions</p>
