--- a/app/views/my-tasks-using-tl/add-payment/add-payment.html
+++ b/app/views/my-tasks-using-tl/add-payment/add-payment.html
@@ -23,13 +23,13 @@
       <nav>
         <ul id="navigation" class="govuk-header__navigation  " aria-label="Navigation menu">
           <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
-            <a class="govuk-header__link" href="/my-tasks/task-list">
+            <a class="govuk-header__link" href="/my-tasks-using-tl/task-list">
               My tasks
             </a>
           </li>
 
           <li class="govuk-header__navigation-item ">
-            <a class="govuk-header__link" href="/my-tasks/statistics/statistics">
+            <a class="govuk-header__link" href="/my-tasks-using-tl/statistics/statistics">
               My clearances
             </a>
           </li>
@@ -47,7 +47,7 @@
 
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="/my-tasks/task-list">Back</a>
+  <a class="govuk-back-link" href="/my-tasks-using-tl/task-list">Back</a>
 {% endblock %}
 
 
@@ -71,7 +71,7 @@
           </dt>
           <dd class="govuk-summary-list__value">
             <strong class="govuk-tag govuk-tag--yellow">
-              Not started
+              Not Started
             </strong>
           </dd>
 
