--- a/app/views/my-tasks-using-tl/add-payment/bluezone-process.html
+++ b/app/views/my-tasks-using-tl/add-payment/bluezone-process.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Task process page - 1
+  Add payment details
 {% endblock %}
 
 
@@ -24,12 +24,12 @@
       <nav>
         <ul id="navigation" class="govuk-header__navigation  " aria-label="Navigation menu">
           <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
-            <a class="govuk-header__link" href="/my-tasks/task-list">
+            <a class="govuk-header__link" href="/my-tasks-using-tl/task-list">
               My tasks
             </a>
           </li>
           <li class="govuk-header__navigation-item ">
-            <a class="govuk-header__link" href="/my-tasks/statistics/statistics">
+            <a class="govuk-header__link" href="/my-tasks-using-tl/statistics/statistics">
               My clearances
             </a>
           </li>
@@ -49,7 +49,7 @@
 
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="/my-tasks/add-payment/add-payment">Back</a>
+  <a class="govuk-back-link" href="/my-tasks-using-tl/add-payment/add-payment">Back</a>
 {% endblock %}
 
 {% block content %}
