--- a/app/views/my-tasks-using-tl/claim-details/pause-this-task.html
+++ b/app/views/my-tasks-using-tl/claim-details/pause-this-task.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  I can't do this task
+  Park task
 {% endblock %}
 
 
@@ -87,7 +87,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#no-reason-error">Select your reason for not doing this task</a>
+        <a href="#no-reason-error">Select reason for parking</a>
       </li>
     </ul>
   </div>
@@ -101,7 +101,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#other-reason-required">Enter your reason for not doing this task</a>
+        <a href="#other-reason-required">Enter reason for parking task</a>
       </li>
     </ul>
   </div>
@@ -124,8 +124,8 @@
         Status
       </dt>
       <dd class="govuk-summary-list__value">
-        <strong class="govuk-tag govuk-tag--grey">
-          To-do
+        <strong class="govuk-tag govuk-tag--yellow">
+          Not started
         </strong>
       </dd>
 
@@ -153,7 +153,7 @@
         Description
       </dt>
       <dd class="govuk-summary-list__value">
-        Perform a check and update ceased to care detials
+        Check and update ceased to care details
       </dd>
 
     </div>
@@ -177,7 +177,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Why do you want to parking this task?</h1>
+      <h1 class="govuk-heading-xl">Why do you want to park this task?</h1>
 
       <form class="form " name="reason-form-2" action="/my-tasks-using-tl/task-list-pause-update-care" method="post">
 
@@ -190,7 +190,7 @@
       <!-- Specific error block - Start -->
 
       <span id="no-reason-error-2" class="govuk-error-message govuk-radios__conditional--hidden">
-          <span class="govuk-visually-hidden">Error:</span> Select your reason for parking this task
+          <span class="govuk-visually-hidden">Error:</span> Select reason for parking
       </span>
 
       <!-- Specific error block - End -->
@@ -209,7 +209,7 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="reason-2" name="pause-this-task-care" type="radio" value="Claimant didn't pick up the phone" data-aria-controls="pause-this-task-care">
               <label class="govuk-label govuk-radios__label" for="reason-1">
-                Claimant didn't pick up the phone
+                Claimant didn't answer the phone
               </label>
             </div>
             <div class="govuk-radios__item">
@@ -221,12 +221,12 @@
             <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="pause-this-task-care">
               <div class="govuk-form-group">
                 <label class="govuk-label" for="reason-5">
-                  Enter your reason
+                  Enter reason for parking task
                 </label>
 
                 <!-- Field Error - Start -->
                 <span id="no-reason-error-2-2" class="govuk-error-message govuk-radios__conditional--hidden">
-                    <span class="govuk-visually-hidden">Error:</span>Enter your reason for parking this task
+                    <span class="govuk-visually-hidden">Error:</span>Enter reason for parking task
                 </span>
                 <!-- Field Error - End -->
 
