--- a/app/views/my-tasks-using-tl/in-progress-2/assign-task-confirm-answers.html
+++ b/app/views/my-tasks-using-tl/in-progress-2/assign-task-confirm-answers.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Confirm assigning details
+  Confirm details
 {% endblock %}
 
 {% block header %}
@@ -110,7 +110,7 @@
             Priority
           </dt>
           <dd class="govuk-summary-list__value">
-            Very High
+            Very high
           </dd>
 
         </div>
@@ -118,7 +118,7 @@
       </dl>
       <br>
       <br>
-      <h2 class="govuk-heading-m">New assigning information</h2>
+      <h2 class="govuk-heading-m">Assigned to and notes</h2>
 
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
         <div class="govuk-summary-list__row">
@@ -131,7 +131,7 @@
           <dd class="govuk-summary-list__actions">
             <a href="assign-this-task">
               Change
-              <span class="govuk-visually-hidden"> escalation level</span>
+              <span class="govuk-visually-hidden">Assigned to</span>
             </a>
           </dd>
         </div>
@@ -154,7 +154,7 @@
       </dl>
       <br>
       <br>
-      <h2 class="govuk-heading-m">Why you want to assign this task?</h2>
+      <h2 class="govuk-heading-m">Reason for assigning task</h2>
 
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
         <div class="govuk-summary-list__row">
@@ -167,7 +167,7 @@
           <dd class="govuk-summary-list__actions">
             <a href="assign-this-task">
               Change
-              <span class="govuk-visually-hidden"> licence period</span>
+              <span class="govuk-visually-hidden">Reason for asssigning</span>
             </a>
           </dd>
         </div>
@@ -179,7 +179,7 @@
         <input type="hidden" name="answers-checked" value="true">
 
         <button type="submit" class="govuk-button" data-module="govuk-button">
-          Assign this task
+          Assign task
         </button>
 
       </form>
