--- a/app/views/my-tasks-using-tl/in-progress/assign-this-task.html
+++ b/app/views/my-tasks-using-tl/in-progress/assign-this-task.html
@@ -195,10 +195,10 @@
       </li>
 
       <li>
-        <a href="#more-notes-text">Enter your notes for this task</a>
+        <a href="#more-notes-text">Enter notes</a>
       </li>
       <li>
-        <a href="#more-details">Enter your reason for not doing this task</a>
+        <a href="#more-details">Enter reason for assigning task</a>
       </li>
     </ul>
   </div>
@@ -214,10 +214,10 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#more-notes-text">Enter your notes for this task</a>
+        <a href="#more-notes-text">Enter notes</a>
       </li>
       <li>
-        <a href="#more-details">Enter your reason for not doing this task</a>
+        <a href="#more-details">Enter reason for assigning task</a>
       </li>
     </ul>
   </div>
@@ -232,7 +232,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#more-notes-text">Enter your notes for this task</a>
+        <a href="#more-notes-text">Enter notes</a>
       </li>
 
     </ul>
@@ -248,7 +248,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#more-details">Enter your reason for not doing this task</a>
+        <a href="#more-details">Enter reason for assigning task</a>
       </li>
 
     </ul>
@@ -264,7 +264,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#assign-team-member">Select a team member</a>
+        <a href="#assign-team-member">Select team member</a>
       </li>
 
     </ul>
@@ -346,7 +346,7 @@
             Priority
           </dt>
           <dd class="govuk-summary-list__value">
-            Very High
+            Very high
           </dd>
 
         </div>
@@ -364,18 +364,18 @@
         <div class="govuk-form-group" id="assign-team-member">
 
         <label class="govuk-label" for="assign-team-member">
-          Select a team member
+          Select team member
         </label>
 
         <!-- Field Error - Start -->
         <span id="assign-team-member-error" class="govuk-error-message govuk-radios__conditional--hidden">
-            <span class="govuk-visually-hidden">Error:</span>Select a team member
+            <span class="govuk-visually-hidden">Error:</span>Select team member
         </span>
         <!-- Field Error - End -->
 
 
         <select id="assign-team-member-select" class="govuk-select" name="assign-team-member" >
-          <option value="no-member" selected>Select member</option>
+          <option value="no-member" selected>--Select--</option>
           <option value="Andrew Hardy" >Andrew Hardy</option>
           <option value="Anjita Lamzel" >Anjita Lamzel </option>
           <option value="Benson Kemi" >Benson Kemi</option>
@@ -397,12 +397,12 @@
       <!-- Notes -->
       <div class="govuk-form-group" id="more-notes-section">
         <label class="govuk-label" for="escalate-notes">
-          Notes
+          Enter notes
         </label>
 
         <!-- Field Error - Start -->
         <span id="more-notes-text" class="govuk-error-message govuk-radios__conditional--hidden">
-            <span class="govuk-visually-hidden">Error:</span>Enter your notes for this task
+            <span class="govuk-visually-hidden">Error:</span>Enter notes
         </span>
         <!-- Field Error - End -->
 
@@ -414,12 +414,12 @@
       <div class="govuk-form-group" id="more-details">
 
         <label class="govuk-label" for="more-detail">
-          Enter the reason why you want to assign this task
+          Enter reason for assigning task
         </label>
 
         <!-- Field Error - Start -->
         <span id="reason-to-escalate-text" class="govuk-error-message govuk-radios__conditional--hidden">
-            <span class="govuk-visually-hidden">Error:</span>Enter your reason for not doing this task
+            <span class="govuk-visually-hidden">Error:</span>Enter reason for assigning task
         </span>
         <!-- Field Error - End -->
 
@@ -430,7 +430,7 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="contact" name="contact" type="checkbox" value="email" data-aria-controls="conditional-contact">
         <label class="govuk-label govuk-checkboxes__label" for="contact">
-          Add to 'Assigned by me' to follow this task's progress.
+          Add task to 'Assigned by me' list to follow progress
         </label>
       </div>
 
