--- a/app/views/index.html
+++ b/app/views/index.html
@@ -81,7 +81,7 @@
         <!-- DWP Tasks section end -->
         <br><br><br>
         <!-- Location service section start -->
-        <h1 class="govuk-heading-l">Location service <p class="govuk-body">Service for agents to find addressess.</p></h1>
+        <h1 class="govuk-heading-l">Address service <p class="govuk-body">Service for agents to find addressess.</p></h1>
         <br><br>
         <table class="govuk-table">
         <tbody class="govuk-table__body">
