--- a/app/views/index-dwp-tasks.html
+++ b/app/views/index-dwp-tasks.html
@@ -66,7 +66,7 @@
       <table class="govuk-table">
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row" >
-          <td class="govuk-table__cell " style="width:78%;">
+          <td class="govuk-table__cell " style="width:28% !important;">
             <a href="/my-tasks/task-list">Manage tasks using tabs and task list</a>
 
             <span class="govuk-heading-s" style="padding-top:2rem;">Notes</span>
@@ -75,8 +75,12 @@
             </ul>
 
           </td>
-          <td class="govuk-table__cell">
-            <strong class="govuk-tag govuk-tag govuk-tag--blue">
+          <td class="govuk-table__cell" style="width:44%;">
+            <strong class="govuk-tag govuk-tag govuk-tag--red">
+              Experimental
+            </strong>
+            <br>
+            <strong class="govuk-tag govuk-tag govuk-tag--blue govuk-!-margin-top-3">
               To be tested
             </strong>
         </td>
@@ -93,7 +97,10 @@
 
           </td>
           <td class="govuk-table__cell">
-            <strong class="govuk-tag govuk-tag govuk-tag--blue">
+            <strong class="govuk-tag govuk-tag govuk-tag--red">
+              Experimental
+            </strong>
+            <strong class="govuk-tag govuk-tag govuk-tag--blue  govuk-!-margin-top-3">
               To be tested
             </strong>
         </td>
