--- a/app/views/my-tasks-using-tl/in-progress-2/assign-this-task.html
+++ b/app/views/my-tasks-using-tl/in-progress-2/assign-this-task.html
@@ -414,12 +414,12 @@
       <div class="govuk-form-group" id="more-details">
 
         <label class="govuk-label" for="more-detail">
-          Reason for assigning this task
+          Reason for assigning task
         </label>
 
         <!-- Field Error - Start -->
         <span id="reason-to-escalate-text" class="govuk-error-message govuk-radios__conditional--hidden">
-            <span class="govuk-visually-hidden">Error:</span>Enter reason for not doing this task
+            <span class="govuk-visually-hidden">Error:</span>Enter reason for assigning task
         </span>
         <!-- Field Error - End -->
 
