--- a/app/views/my-tasks-using-tl/claim-details/pause-this-task.html
+++ b/app/views/my-tasks-using-tl/claim-details/pause-this-task.html
@@ -209,7 +209,7 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="reason-2" name="pause-this-task-care" type="radio" value="Claimant didn't pick up the phone" data-aria-controls="pause-this-task-care">
               <label class="govuk-label govuk-radios__label" for="reason-1">
-                Claimant didn't answer the phone
+                Claimant didn't answer phone
               </label>
             </div>
             <div class="govuk-radios__item">
