--- a/app/views/my-tasks-using-tl/add-payment/pause-this-task.html
+++ b/app/views/my-tasks-using-tl/add-payment/pause-this-task.html
@@ -207,9 +207,9 @@
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="reason-2" name="pause-this-task" type="radio" value="Claimant didn't pick up the phone" data-aria-controls="pause-this-task">
+              <input class="govuk-radios__input" id="reason-2" name="pause-this-task" type="radio" value="Claimant did not answer phone" data-aria-controls="pause-this-task">
               <label class="govuk-label govuk-radios__label" for="reason-1">
-                Claimant didn't answer phone
+                Claimant did not answer phone
               </label>
             </div>
             <div class="govuk-radios__item">
