--- a/app/views/my-tasks-using-tl/claim-details/pause-this-task.html
+++ b/app/views/my-tasks-using-tl/claim-details/pause-this-task.html
@@ -201,13 +201,13 @@
 
           <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="reason-1" name="pause-this-task-care" type="radio" value="Unable to investigate and confirm now" data-aria-controls="pause-this-task-care">
+              <input class="govuk-radios__input" id="reason-1" name="pause-this-task-care" type="radio" value="I need to talk to another team member" data-aria-controls="pause-this-task-care">
               <label class="govuk-label govuk-radios__label" for="reason-1">
-                Unable to investigate and confirm now
+                I need to talk to another team member
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="reason-2" name="pause-this-task-care" type="radio" value="Claimant didn't pick up the phone" data-aria-controls="pause-this-task-care">
+              <input class="govuk-radios__input" id="reason-2" name="pause-this-task-care" type="radio" value="Claimant did not answer phone" data-aria-controls="pause-this-task-care">
               <label class="govuk-label govuk-radios__label" for="reason-1">
                 Claimant did not answer phone
               </label>
