--- a/app/views/my-tasks/task-list-assign-check-disabled-details.html
+++ b/app/views/my-tasks/task-list-assign-check-disabled-details.html
@@ -116,7 +116,7 @@
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell"><a href="#">Check applicant and partner benefits  </a></td>
+            <td class="govuk-table__cell"><a href="#">Check applicant and partner benefits</a></td>
             <td class="govuk-table__cell">No reason provided</td>
           </tr>
 
@@ -127,7 +127,7 @@
 
           <tr class="govuk-table__row">
             <td class="govuk-table__cell"><a href="#">Update bank details </a></td>
-            <td class="govuk-table__cell">System error while adding detials, will try tomorrow.</td>
+            <td class="govuk-table__cell">System error while adding detials, will try tomorrow</td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__cell"><a href="#">Update dependent qualifying benefits </a></td>
