--- a/app/views/my-tasks/task-list-cancel-check-disabled-details.html
+++ b/app/views/my-tasks/task-list-cancel-check-disabled-details.html
@@ -126,7 +126,7 @@
 
           <tr class="govuk-table__row">
             <td class="govuk-table__cell"><a href="#">Update bank details </a></td>
-            <td class="govuk-table__cell">System error while adding detials, will try tomorrow.</td>
+            <td class="govuk-table__cell">System error while adding detials, will try tomorrow</td>
           </tr>
 
           <tr class="govuk-table__row">
