--- a/app/views/my-tasks/task-list-in-progress.html
+++ b/app/views/my-tasks/task-list-in-progress.html
@@ -106,11 +106,11 @@
 
           <tr class="govuk-table__row">
             <td class="govuk-table__cell"><a href="#">Update bank details </a></td>
-            <td class="govuk-table__cell">System error while adding details, will try tomorrow.</td>
+            <td class="govuk-table__cell">System error while adding details, will try tomorrow</td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__cell"><a href="/my-tasks/in-progress-2/check-disable-details">Check disabled person's details and appointee</a></td>
-            <td class="govuk-table__cell">Unknown CACS issue. Raised an issue ticket. </td>
+            <td class="govuk-table__cell">Unknown CACS issue. Raised an issue ticket </td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__cell"><a href="#">Update dependent qualifying benefits </a></td>
