Made minor changes

--- a/app/views/my-tasks-using-tl/add-new-tasks.html
+++ b/app/views/my-tasks-using-tl/add-new-tasks.html
@@ -94,7 +94,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">How many new tasks do you want to add to your task list?</h1>
+      <h1 class="govuk-heading-xl">How many tasks do you want to add to your task list?</h1>
       <form class="form" name="no-of-tasks-form" action="task-list-new-tasks-added" onsubmit="return validateForm()" method="post">
 
       <div class="govuk-form-group" id="reason-options">
