--- a/app/views/my-tasks-using-tl/task-list-new-tasks-added.html
+++ b/app/views/my-tasks-using-tl/task-list-new-tasks-added.html
@@ -56,7 +56,7 @@
   </div>
   <div class="govuk-notification-banner__content">
     <p class="govuk-notification-banner__heading">
-      {{ data['no-of-tasks'] | default('No data provided') }} task(s) added to task list
+      {{ data['no-of-tasks'] | default('No data provided') }} task(s) added to my task list
     </p>
   </div>
 </div>
