--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  DWP Tasks
+  DWP RBC Common Capabilities
 {% endblock %}
 
 {% block header %}
