--- a/app/views/my-tasks-using-tl/claim-details/check-claim-details-history.html
+++ b/app/views/my-tasks-using-tl/claim-details/check-claim-details-history.html
@@ -30,7 +30,7 @@
 
           <li class="govuk-header__navigation-item ">
             <a class="govuk-header__link" href="/my-tasks-using-tl/statistics/statistics">
-              My clearnaces
+              My clearances
             </a>
           </li>
 
