--- a/app/views/my-tasks/task-list-new-tasks-added.html
+++ b/app/views/my-tasks/task-list-new-tasks-added.html
@@ -31,7 +31,7 @@
 
           <li class="govuk-header__navigation-item ">
             <a class="govuk-header__link" href="/my-tasks/statistics/statistics">
-              My clearnaces
+              My clearances
             </a>
           </li>
 
