--- a/app/views/my-tasks/task-list-pause-add-payment.html
+++ b/app/views/my-tasks/task-list-pause-add-payment.html
@@ -57,7 +57,7 @@
   </div>
   <div class="govuk-notification-banner__content">
     <p class="govuk-notification-banner__heading">
-      Task parked and added to in progress list
+      Task parked and added to my in progress list
     </p>
     <p class="govuk-body">Reason: {{ data['pause-this-task'] | default('No reason provided') }}</p>
   </div>
