--- a/app/views/my-tasks-using-tl/add-payment/pause-this-task.html
+++ b/app/views/my-tasks-using-tl/add-payment/pause-this-task.html
@@ -153,7 +153,7 @@
         Description
       </dt>
       <dd class="govuk-summary-list__value">
-        Add new payment details to a claimant's account
+        Add new payment details to carer's account
       </dd>
 
     </div>
@@ -221,7 +221,7 @@
             <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="pause-this-task">
               <div class="govuk-form-group">
                 <label class="govuk-label" for="reason-5">
-                  Enter reason for parking
+                  Enter reason for parking task
                 </label>
 
                 <!-- Field Error - Start -->
