--- a/app/views/my-tasks/add-payment/add-payment-in-progress.html
+++ b/app/views/my-tasks/add-payment/add-payment-in-progress.html
@@ -101,7 +101,7 @@
             Description
           </dt>
           <dd class="govuk-summary-list__value">
-            Add new payment details to a claimant's account
+            Add new payment details to carer's account
           </dd>
 
         </div>
